Bug 715323 - Make offset paramater in NotifyDataArrived PRInt64 r=cpearce